2007-03-02 Eric Sandall <sandalle@sourcemage.org>
	* CONFIGURE: Removed query, now done with an optional_depends
	* DEPENDS: Properly optionally depend on antlr
	* BUILD: Use list_find to see if we want antlr support
	  antlr's jar file is not in SM_OTH_HOME

2006-06-28 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Removed BUILD_API=2, set grimoire-wide

2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2005-11-29 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2005-07-30 Eric Sandall <sandalle@sourcemage.org>
	* DEPENDS: Added grimoire dependency on z-rejected (Bug #9281)

2005-07-22 David Brown <dmlb2000@gmail.com>
	* DETAILS: updated source url so we won't get
	  bug #9335 again

2005-06-05 Thomas Houssin <Thomas.Houssin@sourcemage.org>
	* DETAILS: Updated to 1.6.5

2005-05-29 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 1.6.4 (old tarball removed)

2005-05-18 Rafael George <george.rafael@gmail.com>
	* Update to 1.6.3

2005-03-30 Andrew Stitt <astitt@sourcemage.org>
	* BUILD: remove relative paths to grimoire libraries

2005-01-29 Arjan Bouter <abouter@sourcemage.org>
	* BUILD: spell_installed -> spell_ok conversion

2004-10-06 Eric Schabell <eschabell@sourcemage.org>
	* FINAL: added to fix my own bug #7423, guess no java section
	  maintainer?

2004-08-26 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 1.6.2 (Bug #7225)
	  Added BUILD_API=2
	* CONFIGURE: Converted to config_query
	* BUILD: Converted to BUILD_API 2
	* INSTALL: Added
	* DEPENDS: Use config_query response

2004-02-16 Sergey Lipnevich <sergey@sourcemage.org>
	* DETAILS: upgrade to 1.6.1.

2004-01-19 David C. Haley <dhaley@hot.rr.com>
	* DETAILS: Upgraded to 1.6.0

2003-12-14 hgg <hgreig@bigpond.net.au>
	* BUILD,ant.sh: now installs this file for setting of $ANT_HOME,
	  sources java.sh during cast too
	* POST_INSTALL: deleted (see above)

2003-10-29 Eric Sandall <sandalle@sourcemage.org>