@@ -5,14 +5,14 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/apache-$SPELL-$VERSION
    SOURCE_URL[0]=http://archive.apache.org/dist/ant/source/$SOURCE
    SOURCE_URL[1]=ftp://ftp.sourcemage.sk/mirror/java/$SOURCE
      SOURCE_HASH=sha512:d527c86df32045a1083c141bb5604b26ae94bb77f68e1bcad57fa86aa2c96c3648392597e793845c5753b3013a76259b18e433e686a0ac34612fba56761fe268
-        WEB_SITE=http://ant.apache.org/
-         ENTERED=20030120
-         UPDATED=20040127
+      PATCHLEVEL=1
       LICENSE[0]=APACHE
+        WEB_SITE=http://ant.apache.org/
         KEYWORDS="java"
+         ENTERED=20030120
            SHORT="Advanced build system using Java"
 cat << EOF
-Ant is a Java-based build tool. In theory, it is kind of like Make, without 
-Make's wrinkles and with the full portability of pure Java code.(quote from 
+Ant is a Java-based build tool. In theory, it is kind of like Make, without
+Make's wrinkles and with the full portability of pure Java code.(quote from
 the website)
 EOF
