@@ -1,3 +1,7 @@
+2007-09-28 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Incremented PATCHLEVEL=1 to install update ant.sh
+	* ant.sh: Ant requires Java to run, so make sure JAVA_HOME is set if not
+
 2007-03-02 Eric Sandall <sandalle@sourcemage.org>
 	* CONFIGURE: Removed query, now done with an optional_depends
 	* DEPENDS: Properly optionally depend on antlr
